--- a/.github/workflows/upload-chain-artifacts.yml
+++ b/.github/workflows/upload-chain-artifacts.yml
@@ -7,6 +7,10 @@ on:
         description: 'The name of the target chain (e.g. op-mainnet)'
         required: true
 
+permissions:
+  contents: read
+  id-token: write
+
 jobs:
   upload-chain-artifacts:
     runs-on: ubuntu-latest
@@ -17,7 +21,8 @@ jobs:
       - name: Google cloud auth
         uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          workload_identity_provider: ${{ secrets.GCP_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
       - name: Set up GCP SDK
         uses: 'google-github-actions/setup-gcloud@v2'
